--- a/src/pug/includes/footer.pug
+++ b/src/pug/includes/footer.pug
@@ -1,6 +1,6 @@
 .footer
-    .container-lg
-        .d-flex.justify-content-between.align-items-center
+    .container
+        .footer-container
             p Все права защищены ©
             .social-media.d-flex.justify-content-between
               a(href="https://ru-ru.facebook.com" target="_blank")
