--- a/src/css/components/footer.scss
+++ b/src/css/components/footer.scss
@@ -1,7 +1,16 @@
 .footer {
+    width: 100%;
+    margin: 65px auto 0;
     padding: 23px 0px;
-    margin-top: 99px;
     background: #3F4750;
+    .footer-container {
+        max-width: 1200px;
+        padding: 0 15px;
+        margin: auto;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
     p {
         font-family: 'Lato';
         font-style: normal;
@@ -14,7 +23,7 @@
     }
 
     .social-media {
-        width: 110px;
+        width: 120px;
         
         a svg path{
             transition: 0.2s;
@@ -32,6 +41,33 @@
 
         .whatsapp:hover path {
             fill: #47CF34;
+        }
+    }
+}
+
+@media (max-width: 576px) {
+    .footer {
+        height: 120px;
+        margin: 30px auto 0 !important;
+        .footer-container {
+            height: 100%;
+            flex-direction: column-reverse;
+        }
+    
+        .social-media {
+            padding-top: 5px;
+            width: 155px;
+          
+        }
+    }
+}
+
+@media (max-width: 768px) {
+    .footer {
+        margin: 130px auto 0;
+        padding: 23px 0px;
+        .footer-container {
+            padding: 0 0;
         }
     }
 }
