create js modules and  fix style

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -2,7 +2,11 @@
 @import './components/home.scss';
 @import './components/footer.scss';
 @import './components/fonts/_lato.scss';
-
+@import './components/services.scss';
+@import './components/training.scss';
+@import './components/consultation.scss';
+@import './components/price.scss';
+@import './components/modalPage.scss';
 
 * {
     box-sizing: border-box;
