--- a/src/css/components/footer.scss
+++ b/src/css/components/footer.scss
@@ -1,6 +1,5 @@
 .footer {
     width: 100%;
-    margin: 65px auto 0;
     padding: 23px 0px;
     background: #3F4750;
     .footer-container {
@@ -48,7 +47,7 @@
 @media (max-width: 576px) {
     .footer {
         height: 120px;
-        margin: 30px auto 0 !important;
+        margin: 0 auto 0 !important;
         .footer-container {
             height: 100%;
             flex-direction: column-reverse;
@@ -64,7 +63,7 @@
 
 @media (max-width: 768px) {
     .footer {
-        margin: 130px auto 0;
+        margin: 0 auto 0;
         padding: 23px 0px;
         .footer-container {
             padding: 0 0;
