--- a/src/pug/includes/header.pug
+++ b/src/pug/includes/header.pug
@@ -1,7 +1,7 @@
 mixin links
   a.menu__link(href="./") Консультации
-  a.menu__link(href="./services.html") Услуги
-  a.menu__link(href="./training.html") Треннинги
+  a.menu__link(href="#services") Услуги
+  a.menu__link(href="./price.html") Треннинги
   a(href="https://www.youtube.com/watch?v=sQD4KcCV-40" target="_blank") Блог
   .social-media
     a(href="https://ru-ru.facebook.com" target="_blank")
