--- a/src/pug/maket.pug
+++ b/src/pug/maket.pug
@@ -2,7 +2,7 @@ head
   meta(charset='UTF-8')
   meta(http-equiv='X-UA-Compatible', content='IE=edge')
   meta(name='viewport', content='width=device-width, initial-scale=1.0')
-  title Document
+  title ZEON TWO MODULE
   style
   link(rel='preconnect', href='https://fonts.googleapis.com')
   link(rel='preconnect', href='https://fonts.gstatic.com', crossorigin='')
@@ -11,6 +11,5 @@ head
   body
     include includes/header
     block content
-
     include includes/footer
     script(type="module", src="../js/main.js")
