--- a/src/pug/pages/training.pug
+++ b/src/pug/pages/training.pug
@@ -1,5 +1,129 @@
 extends ../maket.pug
 
 block content
-    .container
-        p Треннинги
+    section#breadcrumbs
+        .container 
+            .breadcrumbs
+                a.bread-title(href="./") Главная
+                p.bread-slash /
+                a.bread-title(href="./") Тренинги
+                p.bread-slash /
+                p.bread-descr Бизнес-тренинг «Маркетинг – технология роста»
+    section#training
+        .container 
+            .training-title__wrapper
+                img.training-cube_img(src="../../assets/img/icons/cube_one.svg", alt="")
+                img.training__line-img(src="../../assets/img/icons/train-line.svg", alt="")
+                p.training-title__text Бизнес-тренинг «Маркетинг – технология роста»
+                p.training-title__descr Для кого: руководители компаний, маркетологи, продавцы
+                p.training-title__descr Цели бизнес-тренинга:
+                .training-items__blocks
+                    .services-items__block
+                        img.services-items__block-img(src="../../assets/img/icons/logo2.svg", alt="")
+                        p.services-items__block-descr Определение маркетинга как технологии роста
+                    .services-items__block
+                        img.services-items__block-img(src="../../assets/img/icons/logo2.svg", alt="")
+                        p.services-items__block-descr Организация маркетинга как сквозного бизнес-процесса
+                    .services-items__block
+                        img.services-items__block-img(src="../../assets/img/icons/logo2.svg", alt="")
+                        p.services-items__block-descr Получение практических навыков применения технологии маркетинга
+                    button.training__button Подробнее
+                        span.training__button-span
+                            svg(width='24' height='24' viewbox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg')
+                                path(d='M2 12C2 13.9778 2.58649 15.9112 3.6853 17.5557C4.78412 19.2002 6.3459 20.4819 8.17317 21.2388C10.0004 21.9957 12.0111 22.1937 13.9509 21.8079C15.8907 21.422 17.6725 20.4696 19.0711 19.0711C20.4696 17.6725 21.422 15.8907 21.8079 13.9509C22.1937 12.0111 21.9957 10.0004 21.2388 8.17317C20.4819 6.3459 19.2002 4.78412 17.5557 3.6853C15.9112 2.58649 13.9778 2 12 2C10.6868 2 9.38642 2.25866 8.17317 2.7612C6.95991 3.26375 5.85752 4.00035 4.92893 4.92893C3.05357 6.8043 2 9.34784 2 12ZM13.86 8.31L16.72 11.31C16.7623 11.3534 16.7962 11.4042 16.82 11.46C16.8625 11.5071 16.8963 11.5612 16.92 11.62C16.9729 11.7397 17.0002 11.8691 17.0002 12C17.0002 12.1309 16.9729 12.2603 16.92 12.38C16.8724 12.5028 16.801 12.6149 16.71 12.71L13.71 15.71C13.5217 15.8983 13.2663 16.0041 13 16.0041C12.7337 16.0041 12.4783 15.8983 12.29 15.71C12.1017 15.5217 11.9959 15.2663 11.9959 15C11.9959 14.7337 12.1017 14.4783 12.29 14.29L13.59 13H8C7.73478 13 7.48043 12.8946 7.29289 12.7071C7.10536 12.5196 7 12.2652 7 12C7 11.7348 7.10536 11.4804 7.29289 11.2929C7.48043 11.1054 7.73478 11 8 11H13.66L12.41 9.69C12.227 9.49772 12.1279 9.24062 12.1344 8.97525C12.141 8.70989 12.2527 8.458 12.445 8.275C12.6373 8.092 12.8944 7.99288 13.1597 7.99944C13.4251 8.00601 13.677 8.11772 13.86 8.31Z' fill='white')
+                .training-descr__block
+                    p.training-descr__block-title Программа бизнес-тренинга
+                    .training-descr__blocks
+                        p.training__descr__block-title Функция маркетинга как бизнес-технологии
+                        .training-items__descr-block
+                            .descr-row
+                            p.descr-title Рынок как динамическая система взаимодействия потребительской и конкурентной сред
+                        .training-items__descr-block
+                            .descr-row
+                            p.descr-title Поиск точек роста в непрерывно меняющейся рыночной среде
+                        .training-items__descr-block
+                            .descr-row
+                            p.descr-title Прибыль компании как производная от управления маркетингом
+                        .training-items__descr-block    
+                            .descr-row
+                            p.descr-title Концепция 4Р маркетинга как универсальная модель реализации рыночных возможностей
+                    .training-descr__blocks
+                        p.training__descr__block-title Практический инструментарий
+                        .training-items__descr-block
+                            .descr-row
+                            p.descr-title Количественные и качественные методы исследования рынка. Первичная информация как основа формирования эффективной стратегии. Отсутствие системности в получении и обработке информации – ключевые проблемы. Целеполагание на основе исследований.
+                        .training-items__descr-block
+                            .descr-row
+                            p.descr-title Формирование товарной матрицы. Технология категорийного менеджмента. Кросс -конкурентный анализ, определение ролей продукта в товарной матрице. 
+                        .training-items__descr-block
+                            .descr-row
+                            p.descr-title Ценообразование на основе рыночной ценности продукта. Выбор ценового позиционирования относительно конкурентов. Управление маржинальностью.
+                        .training-items__descr-block    
+                            .descr-row
+                            p.descr-title Управление коммуникациями с рынком. «Золотое» правило продвижения. Правила выбора каналов коммуникаций. Модели оценки эффективности затрат. Технологии интернет-маркетинга как эффективное дополнение к традиционным каналам продвижения. Основные ошибки в стратегии продвижения
+                        .training-items__descr-block    
+                            .descr-row
+                            p.descr-title Аналитика данных. Оцифрованная картина рынка как основа принятия эффективных решений. Типовые формы анализа основных показателей.  
+                    .training-descr__blocks
+                        p.training__descr__block-title Организация маркетинга в компании
+                        .training-items__descr-block
+                            .descr-row
+                            p.descr-title Принципиальная схема бизнес-процесса маркетинга. Наиболее узкие места. Критерии оценки эффективности
+                        .training-items__descr-block
+                            .descr-row
+                            p.descr-title Маркетинг-план как дорожная карта развития. Структура. Этапы планирования. Контрольные точки выполнения. 
+                        .training-items__descr-block
+                            .descr-row
+                            p.descr-title Взаимодействие служб маркетинга и продаж как основа успешной реализации планов. Устранение разрывов в понимании рыночной ситуации. Создание общего информационного поля.
+                    .training-descr__blocks
+                        p.training__descr__block-title Кейсы-примеры:
+                        .training-items__descr-block
+                            .descr-row
+                            p.descr-title «Догнать и перегнать лидера рынка»
+                        .training-items__descr-block
+                            .descr-row
+                            p.descr-title «Увеличить прибыль на падающем рынке»
+                        .training-items__descr-block
+                            .descr-row
+                            p.descr-title «Comeback бывшего лидера»
+                        .training-items__descr-block
+                            .descr-row
+                            p.descr-title «Повышаем маржинальность, не выходя из кабинета»
+                    .training-descr__blocks
+                        p.training__descr__block-title Кейсы-примеры:
+                        .training-items__descr-block
+                            p.descr-title С заказчиком предварительно согласуется наиболее актуальная проблема. В заключительной части тренинга в ходе совместного обсуждения определяются подходы к ее решению. Результатом является определение целей и плана действий по их достижению.
+                    .training-descr__blocks
+                        p.training__descr__block-title Бонусы
+                        .training-items__descr-block
+                            p.descr-title 5 часов бесплатных консультаций в течение месяца после проведения тренинга.
+                        .training-items__descr-block
+                            p.descr-title Набор шаблонов для анализа ключевых показателей.
+                    .training-descr__blocks
+                        p.training__descr__block-title Преимущества бизнес-тренинга:
+                        .training-items__descr-block
+                            .descr-row
+                            p.descr-title Составлен на основе опыта решения конкретных задач
+                        .training-items__descr-block
+                            .descr-row
+                            p.descr-title Только необходимый минимум теории, не рассматривается плохо применяемый на практике инструментарий
+                        .training-items__descr-block
+                            .descr-row
+                            p.descr-title Акцент на реальных примерах с разбором ошибок
+                        .training-items__descr-block
+                            .descr-row
+                            p.descr-title Направлен на практическую реализацию, начиная с завтрашнего дня
+                    .training-descr__blocks
+                        p.training__descr__block-title Форматы проведения:
+                        .training-items__descr-block
+                            .descr-row
+                            p.descr-title Групповой онлайн-формат, продолжительность 3 дня, по 4 часа в день
+                        .training-items__descr-block
+                            .descr-row
+                            p.descr-title Индивидуальный онлайн-формат, продолжительность 2 дня, по 4 часа в день
+                        .training-items__descr-block
+                            .descr-row
+                            p.descr-title групповой офлайн-формат, продолжительность 2 дня, по 8 часов в день
+            img.price-ciube-tow(src="../../assets/img/services_img.png", alt="")
+            img.price-ciube-two(src="../../assets/img/icons/two-cubes.png", alt="")
+            include ../includes/consultation
