bootstrap col fix

--- a/src/css/components/consultation.scss
+++ b/src/css/components/consultation.scss
@@ -91,6 +91,7 @@
 @media (max-width: 768px) {
     .services-title__consultation {
         margin-top: 100px;
+        padding-bottom: 30px;
 
         .services-consultation__img1,
         .services-consultation__img2,
