--- a/src/pug/includes/header.pug
+++ b/src/pug/includes/header.pug
@@ -1,6 +1,6 @@
 mixin links
-  a.menu__link(href="./") Консультации
-  a.menu__link(href="#services") Услуги
+  a.menu__link(href="./services.html") Консультации
+  a.menu__link(href="./training.html") Услуги
   a.menu__link(href="./price.html") Треннинги
   a(href="https://www.youtube.com/watch?v=sQD4KcCV-40" target="_blank") Блог
   .social-media
