--- a/src/css/components/modalPage.scss
+++ b/src/css/components/modalPage.scss
@@ -1,43 +1,57 @@
-.modal-page {
+.modal-order {
     position: fixed;
-    z-index: 6;
     top: 0;
+    bottom: 0;
+    right: 0;
     left: 0;
-    background: rgba(0, 0, 0, 0.35);
-    width: 100%;
-    height: 100%;
+    background: rgba(0, 0, 0, .5);
     overflow: auto;
-    display: flex;
-    justify-content: center;
-    padding-top: 115px;
-    padding-bottom: 115px;
+    z-index: 10;
+    visibility: hidden;
 }
 
-.modal-page__inner {
-    align-items: center;
-    background-color: white;
-    height: 812px;
+.modal-order_open {
+    visibility: visible;
 }
 
-.modal-page__item {
+.modal-order__wrapper {
+    width: 500px;
+    min-height: 100%;
+
     display: flex;
     align-items: center;
-    height: 758px;
+    margin: 0 auto;
+}
+
+.modal-order__container {
+    position: relative;
+    margin: 50px 0;
+    width: 506px;
+    height: 700px;
+
+    padding: 100px 90px 56px 86px;
+
+    border-radius: 4px;
+    color: #000000;
+    background-color: #FFFFFF;
 }
 
 .modal-page__form {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 0px 70px 0px 70px;
-    div{
-        margin-bottom: 6px;
+
+    .modal__input {
+        margin-bottom: 23px;
     }
 }
 
 .modal-page__close {
-    position: relative;
-    margin: 18px 0px 0px 22px;
+    position: absolute;
+    margin: 20px 0 0 20px;
+    left: 0;
+    top: 0;
+    cursor: pointer;
 }
 
 .modal-page__title {
@@ -66,11 +80,17 @@
     font-weight: 400;
     font-size: 18px;
     line-height: 22px;
+    color: #282C37;
+}
+
+.name::placeholder,
+.big-text::placeholder,
+.email::placeholder {
     color: #9FA7B0;
 }
 
 .big-text {
-    height: 191px;
+    height: 200px;
 }
 
 .name:focus,
@@ -79,20 +99,20 @@
     border: 0px;
     outline: 1px solid #0278ED;
 }
-.error {
-    border: 0px;
-    outline: 1px solid #CF4747;
-}
-
 
 .form__button-submit {
     width: 312px;
 }
-.form__button-submit:disabled{
+
+.form__button-submit:disabled {
     border: 1px solid #9FA7B0;
     background: #9FA7B0;
     width: 312px;
-    color: #FFFFFF;
+}
+
+.input-field-error {
+    border: 0px;
+    outline: 1px solid #CF4747;
 }
 
 .warning-name-error,
@@ -106,4 +126,46 @@
     color: #CF4747;
     margin-left: 11px;
     margin-bottom: 0px;
+}
+
+@media (max-width: 530px) {
+    .modal-order {
+        z-index: 400;
+    }
+
+    .modal-order__wrapper {
+        width: 100%;
+        min-height: 100%;
+
+        display: flex;
+        align-items: center;
+        margin: 0 auto;
+    }
+
+    .modal-order__container {
+        position: relative;
+        margin: 0;
+        width: 100%;
+        height: 110vh;
+        padding: 100px 0 56px 0;
+
+        border-radius: 0;
+        color: #000000;
+        background-color: #FFFFFF;
+    }
+
+    .name,
+    .big-text,
+    .email {
+        width: 300px;
+    }
+
+    .form__button-submit {
+        width: 300px;
+    }
+
+    .modal-page__close {
+        width: 24px;
+        height: 24px;
+    }
 }
