--- a/src/css/components/services.scss
+++ b/src/css/components/services.scss
@@ -1,136 +1,78 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');
-
-.breadcrumbs {
-    margin: auto;
-    max-width: 1200px;
-    padding: 70px 15px 26px;
-    display: flex;
-    align-items: flex-start;
-    gap: 16px;
-    position: relative;
-    z-index: 4;
-
-    .bread-title {
-        font-family: 'Roboto';
-        font-style: normal;
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 16px;
-        color: #9FA7B0;
-    }
-
-    .bread-slash {
-        font-family: 'Roboto';
-        font-style: normal;
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 16px;
-        color: #9FA7B0;
-    }
-
-    .bread-descr {
-        font-family: 'Roboto';
-        font-style: normal;
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 16px;
-        color: #282C37;
-
-    }
-}
-
-#services-title,
-#breadcrumbs {
+#services {
     background: #E5E5E5;
-}
-#services-title {
-    
 
-.container {
-    max-width: 1440px;
-    margin: auto;
-    .price-ciube-tow {
-        position: absolute;
-        top: 125px;
-        right: 0;
-        z-index: 2;
-    }
-}
-.services-title__wrapper {
-    max-width: 1200px;
-    padding-bottom: 165px;
-    margin: auto;
-    height: auto;
-    position: relative;
-    .services-title__img {
-        position: absolute;
-        top: -30px;
-        left: -10px;
-        z-index: 1;
-    }
-
-    .services-title_img-bgi {
-        position: absolute;
-        top: -75px;
-        right: 0;
-    }
-
-    .services-title__text {
+    .services__description {
+        margin-top: 10px;
+        margin-bottom: 0;
         position: relative;
-        z-index: 3;
-        font-family: 'Montserrat';
-        font-style: normal;
-        font-weight: 700;
-        font-size: 44px;
-        line-height: 54px;
-        margin: 0;
-        color: #282C37;
-        padding-left: 15px;
-    }
 
-    .services-items__blocks {
-        padding: 35px 0 0 55px;
-        display: flex;
-        flex-direction: column;
-        gap: 12px;
+        .training__bg-img {
+            position: absolute;
+            top: -80px;
+            right: 0;
+            z-index: 1;
+        }
 
-        .services-items__block {
-            display: flex;
-            align-items: center;
-            gap: 41px;
-            height: 25px;
+        .training__cube-img {
+            position: absolute;
+            top: -30px;
+            left: 40px;
+            z-index: 1;
+        }
 
-            .services-items__block-descr {
-                font-family: 'Roboto';
-                font-style: normal;
-                font-weight: 400;
-                font-size: 17px;
-                line-height: 20px;
-                color: #282C37;
-                margin: 0;
+        .description-text {
+            font-family: 'Montserrat';
+            font-style: normal;
+            font-weight: 700;
+            font-size: 44px;
+            line-height: 54px;
+            color: #282C37;
+            margin: 0 0 35px 60px;
+            position: relative;
+            z-index: 3;
+        }
+
+        .description-plans {
+            margin: 0 0 40px 105px;
+
+            .plans-item {
+                gap: 41px;
+                display: flex;
+                align-items: start;
+
+                img {
+                    width: 23px;
+                    height: 25px;
+                }
+
+                p {
+                    font-family: 'Lato';
+                    font-style: normal;
+                    font-weight: 400;
+                    font-size: 17px;
+                    line-height: 20px;
+                    color: #282C37;
+                }
             }
         }
+
     }
 
-    .services-descr__block {
-        padding: 70px 0 0 15px;
+    .services__second-block {
+        margin: 60px 0 0 62px;
+        max-width: 1155px;
 
-        .services-descr__block-title {
+        .programs-text {
             font-family: 'Montserrat';
-            margin: 0;
             font-style: normal;
             font-weight: 700;
             font-size: 30px;
             line-height: 37px;
             color: #282C37;
+            margin-bottom: 35px;
         }
 
-        .services-descr__item-first,
-        .services-descr__item-second,
-        .services-descr__item-third,
-        .services-descr__item-fourth {
-            margin: 0;
-            max-width: 1155px;
+        .services-descr {
             font-family: 'Lato';
             font-style: normal;
             font-weight: 400;
@@ -138,182 +80,144 @@
             line-height: 22px;
             color: #000000;
             margin-left: 17px;
-        }
-
-        .services-descr__item-first {
-            margin-top: 35px;
-        }
-
-        .services-descr__item-second {
-            margin-top: 20px;
-        }
-
-        .services-descr__item-third {
-            margin-top: 25px;
-        }
-
-        .services-descr__item-fourth {
-            margin-top: 20px;
+            margin-bottom: 27px;
 
             span {
-                color: #8dbefb;
-                ;
+                color: #6CA7EF;
+                cursor: pointer;
+
+                &:hover {
+                    color: #0073ff;
+                    transition: 0.4 ease-in-out;
+                }
             }
         }
 
-        .services-descr__blocks {
-            margin-top: 20px;
-            padding-top: 15px;
-            padding-left: 75px;
-            display: flex;
-            flex-direction: column;
-            gap: 17px;
+        .programs-item {
+            margin-bottom: 160px;
+            margin-left: 35px;
 
-            .services-items__descr-block {
-                display: flex;
-                align-items: center;
-                gap: 19px;
+            .services-ul {
+                margin-left: 38px;
 
-                .descr-row {
-                    min-width: 11px;
-                    min-height: 11px;
-                    background: #A5CBF9;
-                    border-radius: 50%;
-                }
-
-                .descr-title {
-                    margin: 0;
-                    font-family: 'Roboto';
+                .services-li {
+                    font-family: 'Lato';
                     font-style: normal;
                     font-weight: 400;
                     font-size: 17px;
                     line-height: 20px;
                     color: #282C37;
+                    margin-bottom: 10px;
+                    max-width: 1115px;
+                    position: relative;
+                    z-index: 3;
+                }
 
-                    span {
-                        cursor: pointer;
-                        color: #8dbefb;
-                        ;
-                    }
+                .services-li::marker {
+                    font-size: 35px;
+                    color: #A5CBF9;
                 }
             }
         }
     }
 }
-}
-@media (max-width: 576px) {
-    .breadcrumbs {
-        padding: 40px 0px 26px;
 
-        .bread-title,
-        .bread-slash,
-        .bread-descr {
-            font-size: 12px;
-            line-height: 12px;
-        }
-    }
+@media (max-width: 575.98px) {
+    #services {
+        padding-top: 20px;
 
-    .services-title__wrapper {
-
-    
-
-        .services-title__text {
-            font-size: 25px !important;
-            line-height: 25px !important;
-            padding-left: 0;
-        }
-
-        .services-items__blocks {
-            padding: 35px 0 0 15px !important;
-
-            .services-items__block {
-                gap: 20px;
-                height: auto;
-
-                .services-items__block-descr {
-                    font-size: 16px;
-                }
-            }
-        }
-
-        .services-descr__block {
-            padding: 30px 0 0 0 !important;
-
-            .services-descr__block-title {
-                font-size: 25px !important;
-                line-height: 25px;
-            }
-
-            .services-descr__item-first,
-            .services-descr__item-second,
-            .services-descr__item-third,
-            .services-descr__item-fourth {
-                font-size: 16px;
-                margin-left: 15px;
-            }
-
-            .services-descr__blocks {
-                padding-top: 0;
-                padding-left: 0 !important;
-                gap: 20px;
-
-                .services-items__descr-block {
-                    align-items: flex-start;
-                    gap: 15px;
-
-                    .descr-row {
-                        margin-top: 5px;
-                    }
-
-                    .descr-title {
-                        font-size: 16px;
-
-                    }
-                }
-            }
-        }
-    }
-
-}
-
-@media (max-width: 768px) {
-    .container {
-        max-width: 1440px;
-        margin: auto;
-        .price-ciube-tow {
-           display: none;
-        }
-    }
-    .services-title__wrapper {
-        padding-bottom: 40px;
-        .services-title__img {
+        .breadcrumbs {
             display: none;
         }
-        .services-title__text {
-            font-size: 32px;
-            line-height: 35px;
-            padding-left: 0;
-        }
 
-        .services-items__blocks {
-            padding: 35px 0 0 35px;
-
-            .services-items__block {
-                height: auto;
-            }
-        }
-
-        .services-descr__block {
-            padding: 70px 0 0 0px;
-
-            .services-descr__block-title {
-                font-size: 32px;
+        .services__description {
+            .description-text {
+                font-size: 22px !important;
+                line-height: 25px !important;
             }
 
-            .services-descr__blocks {
-                padding-left: 50px;
+            .description-plans {
+                margin: 0 0 40px 0 !important;
+            }
+
+        }
+
+        .services__second-block {
+
+            .programs-text {
+                font-size: 22px !important;
+                line-height: 25px !important;
+                margin-bottom: 35px;
+            }
+
+            .services-descr {
+                margin-left: 0 !important;
+            }
+
+            .programs-item {
+                margin-bottom: 70px !important;
+                margin-left: 0 !important;
+
+                .services-ul {
+                    margin-left: 0 !important;
+                }
             }
         }
     }
 
+
 }
+
+@media (max-width: 767.98px) {
+
+    .training__cube-img,
+    .training__bg-img {
+        display: none !important;
+    }
+
+    .description-text {
+        font-size: 30px !important;
+        line-height: 37px !important;
+    }
+}
+
+@media (max-width: 991.98px) {
+    #services {
+        .services__description {
+            .training__bg-img {}
+
+            .training__cube-img {}
+
+            .description-text {
+                font-size: 35px;
+                line-height: 40px;
+                margin: 0 0 20px 0;
+            }
+
+            .description-plans {
+                margin: 0 0 40px 50px;
+
+                .plans-item {
+                    gap: 20px;
+                }
+            }
+
+        }
+
+        .services__second-block {
+            margin: 60px 0 0 0;
+
+            .programs-text {
+                margin-bottom: 35px;
+            }
+
+            .programs-item {
+                margin-left: 0;
+            }
+        }
+    }
+}
+
+@media (max-width: 1199.98px) {}
+
+@media (max-width: 1399.98px) {}
