--- a/src/css/components/training.scss
+++ b/src/css/components/training.scss
@@ -1,287 +1,334 @@
 #training {
     background: #E5E5E5;
-
-    .container {
-        max-width: 1440px;
-        margin: auto;
-        .price-ciube-tow {
-            position: absolute;
-            top: 125px;
-            right: 12%;
-            z-index: 2;
-        }
-        .price-ciube-two {
-            position: absolute;
-            top: 180%;
-            right: 10%;
-            z-index: 2;
-        }
-    }
-.training-title__wrapper {
-    max-width: 1200px;
-    margin: auto;
-    position: relative;
-    .training-cube_img {
-        position: absolute;
-        top: -30px;
-        left: -10px;
-    }
-    .training-title__descr {
-        font-family: 'Lato';
-        font-style: normal;
-        font-weight: 400;
-        font-size: 18px;
-        line-height: 22px;
-        color: #282C37;
-        padding-left: 15px;
-        padding-bottom: 5px;
-        margin: 0;
-    }
-    .training-title__text {
+    .training__description {
+        margin-top: 10px;
+        margin-bottom: 130px;
         position: relative;
-        z-index: 1;
-        max-width: 1173px;
-        font-family: 'Montserrat';
-        font-style: normal;
-        font-weight: 700;
-        font-size: 44px;
-        line-height: 54px;
-        color: #282C37;
-        margin-left: 15px;
-        padding-bottom: 5px;
-    }
-    .training-items__blocks {
-        padding: 22px 0 160px 56px;
-        display: flex;
-        flex-direction: column;
-        gap: 12px;
-        .services-items__block {
-            display: flex;
-            align-items: center;
-            gap: 41px;
-            height: 25px;
-            .services-items__block-descr {
-                font-family: 'Roboto';
-                font-style: normal;
-                font-weight: 400;
-                font-size: 17px;
-                line-height: 20px;
-                color: #282C37;
-                margin: 0;
-            }
-            img {
-                width: 23px;
-                height: 25px;
-            }
-            
+        .training__bg-img {
+            position: absolute;
+            top: -80px;
+            right: 0;
+            z-index: 1;
         }
 
-        .training__button {
-            margin-top: 45px;
-            width: 287px;
-            height: 48px;
-            background: #47CF34;
-            border-radius: 8px;
-            position: relative;
-            font-family: 'Montserrat';
-            font-style: normal;
-            font-weight: 700;
-            font-size: 16px;
-            line-height: 20px;
-            text-align: center;
-            text-transform: uppercase;
-            color: #FFFFFF;
-            border: none;
-    
-            .training__button-span {
-                position: absolute;
-                right: 20px;
-                top: 20%;
-            }
+        .training__cube-img {
+            position: absolute;
+            top: -30px;
+            left: 40px;
+            z-index: 1;
         }
-    }
-    .training-descr__block {
-        padding:  0 0 120px 15px;
-        .training-descr__block-title {
+
+        .training__line-img {
+            position: absolute;
+            bottom: -4%;
+            right: 10.5%;
+            z-index: 1;
+        }
+        .training__bg-cube {
+            position: absolute;
+            bottom: 730px;
+            right: 0;
+            z-index: 1;
+        }
+        .description-text {
             font-family: 'Montserrat';
             font-style: normal;
             font-weight: 700;
-            font-size: 30px;
-            line-height: 37px;
+            font-size: 44px;
+            line-height: 54px;
             color: #282C37;
+            margin: 0 0 20px 60px;
+            position: relative;
+            z-index: 3;
         }
 
-        .training-descr__blocks {
-            padding-top: 30px;
-            padding-bottom: 15px;
-            display: flex;
-            flex-direction: column;
-            gap: 17px;
-            .training__descr__block-title {
-                font-family: 'Montserrat';
-                font-style: normal;
-                font-weight: 700;
-                font-size: 20px;
-                line-height: 24px;
-                color: #282C37;
-                margin: 0;
-                margin-bottom: 8px;
-            }
-            .training-items__descr-block {
+        .description-descr {
+            font-family: 'Lato';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 18px;
+            line-height: 22px;
+            color: #282C37;
+            margin: 0 0 5px 60px;
+        }
+
+        .description-descrs {
+            font-family: 'Lato';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 18px;
+            line-height: 22px;
+            color: #282C37;
+            margin: 0 0 30px 60px;
+        }
+
+        .description-plans {
+            margin: 0 0 40px 105px;
+
+            .plans-item {
+                gap: 41px;
                 display: flex;
-                align-items: flex-start;
-                gap: 19px;
-                padding-left: 40px;
-                .descr-row {
-                    min-width: 11px;
-                    height: 11px;
-                    background: #A5CBF9;
-                    border-radius: 50%;
+                align-items: start;
+
+                img {
+                    width: 23px;
+                    height: 25px;
                 }
 
-                .descr-title {
+                p {
                     font-family: 'Lato';
                     font-style: normal;
                     font-weight: 400;
                     font-size: 17px;
                     line-height: 20px;
                     color: #282C37;
-                    margin: 0;
                 }
             }
-
         }
-    }
-    .training__line-img {
-        position: absolute;
-        right: 85px;
-        bottom: -80px;
-    }
-}
-}
-@media (max-width: 576px) {
-    #training {
-        background: #E5E5E5;
-        .training-title__wrapper {
-        .training-title__descr {
+
+        .description-button {
+            width: 287px;
+            height: 48px;
+            font-family: 'Montserrat';
+            font-style: normal;
+            font-weight: 700;
             font-size: 16px;
             line-height: 20px;
-            padding-left: 0;
-            padding-bottom: 5px;
-        }
-        .training-title__text {
-            font-size: 25px !important;
-            line-height: 25px !important;
-            margin-left: 0;
-            padding-bottom: 5px;
-        }
-        .training-items__blocks {
-            padding: 20px 0 50px 15px !important;
-            gap: 12px;
-            .services-items__block {
-                display: flex;
-                align-items: center;
-                gap: 20px;
-                height: auto;
+            text-transform: uppercase;
+            color: #FFFFFF;
+            background: #47CF34;
+            border-radius: 8px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            position: relative;
+            border: none;
+            margin-left: 105px;
+
+            &:hover {
+                background: #1eff00;
             }
 
+            .description-span {
+                position: absolute;
+                right: 25px;
+            }
         }
-        .training-descr__block {
-            padding:  0 0 0 0;
-            .training-descr__blocks {
-                .training__descr__block-title {
-                    font-family: 'Montserrat';
+    }
+
+    .training__programs {
+        margin: 165px 0 0 62px;
+
+        .programs-text {
+            font-family: 'Montserrat';
+            font-style: normal;
+            font-weight: 700;
+            font-size: 30px;
+            line-height: 37px;
+            color: #282C37;
+            margin-bottom: 45px;
+        }
+
+        .programs-item {
+            margin-bottom: 42px;
+
+            .programs-title {
+                font-family: 'Montserrat';
+                font-style: normal;
+                font-weight: 700;
+                font-size: 20px;
+                line-height: 24px;
+                color: #282C37;
+                margin-bottom: 20px;
+            }
+
+            .programs-process {
+                font-family: 'Lato';
+                font-style: normal;
+                font-weight: 400;
+                font-size: 17px;
+                line-height: 20px;
+                color: #282C37;
+                padding-top: 5px;
+                margin: 0 0 20px 42px;
+
+            }
+
+            .programs-ul {
+                margin-left: 38px;
+
+                .programs-li {
+                    font-family: 'Lato';
                     font-style: normal;
-                    font-weight: 700;
-                    font-size: 20px;
-                    line-height: 24px;
+                    font-weight: 400;
+                    font-size: 17px;
+                    line-height: 20px;
                     color: #282C37;
-                    margin: 0;
-                    margin-bottom: 8px;
+                    margin-bottom: 10px;
+                    max-width: 1115px;
+                    position: relative;
+                    z-index: 3;
                 }
-                .training-items__descr-block {
-                    gap: 15px !important;
-                    padding-left: 0 !important;
-                    .descr-row {
-                       margin-top: 5px;
-                    }
-    
-                    .descr-title {
-                        font-size: 16px;
-                    }
+
+                .programs-li::marker {
+                    font-size: 35px;
+                    color: #A5CBF9;
                 }
-    
             }
         }
     }
-    }
-    
 }
 
-@media (max-width: 768px) {
-    .breadcrumbs {
-            padding: 40px 0px 26px;
-            .bread-title,
-            .bread-slash,
-            .bread-descr { 
-                font-size: 12px;
-                line-height: 12px;
-            }
-    }
+@media (max-width: 575.98px) {
     #training {
-        background: #E5E5E5;
-        .container {
-            max-width: 1440px;
-            margin: auto;
-            .price-ciube-tow {
-              display: none;
-            }
-            .price-ciube-two {
-                display: none;
-            }
-        }
-        .training-cube_img {
+        padding-top: 20px;
+
+        .breadcrumbs {
             display: none;
         }
-        .training-title__descr {
-            padding-left: 0;
-            padding-bottom: 5px;
-            margin: 0;
-        }
-        .training-title__text {
-            font-size: 32px;
-            line-height: 35px;
-            margin-left: 0;
-            padding-bottom: 5px;
-        }
-        .training-items__blocks {
-            padding: 22px 0 50px 21px;
-            gap: 12px;
-            .services-items__block {
-                height: auto;
+
+        .training__description {
+            margin-top: 10px;
+            margin-bottom: 95px !important;
+
+            .description-text {
+                font-size: 26px !important;
+                line-height: 30px !important;
+            }
+
+            .description-descr {
+                font-size: 16px !important;
+                line-height: 20px !important;
+            }
+
+            .description-descrs {
+                font-size: 16px !important;
+                line-height: 20px !important;
+            }
+
+            .description-plans {
+                margin: 0 0 40px 0 !important;
+                .plans-item {
+                    gap: 20px;
+                }
+            }
+
+            .description-button {
+                margin-left: 0 !important;
+
             }
         }
-        .training-descr__block {
-            padding: 0 0 0 0;
-            .training-descr__blocks {
-                padding-top: 0px;
-                padding-bottom: 15px;
-                gap: 17px;
-                .training__descr__block-title {
-                    margin: 0;
-                    margin-bottom: 8px;
-                }
-                .training-items__descr-block {
-                    gap: 19px;
-                    height: auto;
-                    padding-left: 20px;
-                }
-    
+
+        .training__programs {
+            margin: 80px 0 0 0 !important;
+
+            .programs-text {
+                font-size: 26px;
+                line-height: 30px;
+                margin-bottom: 30px !important;
             }
-        }
-        .training__line-img {
-            display: none;
+
+            .programs-item {
+                margin-bottom: 42px;
+
+                .programs-process {
+                    margin: 0 0 20px 15px !important;
+                }
+
+                .programs-ul {
+                    margin-left: 0 !important;
+
+                    .programs-li::marker {
+                        font-size: 35px;
+                        color: #A5CBF9;
+                    }
+                }
+            }
         }
     }
-    
 }
+
+@media (max-width: 767.98px) {
+
+    .training__cube-img,
+    .training__bg-img,
+    .training__bg-cube,
+    .training__line-img {
+        display: none !important;
+    }
+}
+
+@media (max-width: 991.98px) {
+    #training {
+        .training__description {
+            .training__cube-img {
+                position: absolute;
+                top: -40px;
+                left: -40px;
+                z-index: 1;
+            }
+
+            .description-text {
+                font-size: 35px;
+                line-height: 40px;
+                margin: 0 0 20px 0;
+            }
+
+            .description-descr {
+                margin: 0 0 5px 0;
+            }
+
+            .description-descrs {
+                margin: 0 0 30px 0;
+            }
+
+            .description-plans {
+                margin: 0 0 40px 50px;
+
+            }
+
+            .description-button {
+                margin-left: 50px;
+            }
+        }
+
+        .training__programs {
+            margin: 165px 0 0 0;
+
+            .programs-text {
+                margin-bottom: 45px;
+            }
+
+            .programs-item {
+                margin-bottom: 42px;
+
+                .programs-title {
+                    margin-bottom: 20px;
+                }
+
+                .programs-process {
+                    margin: 0 0 20px 42px;
+
+                }
+
+                .programs-ul {
+                    margin-left: 38px;
+
+                    .programs-li {
+                        margin-bottom: 10px;
+                        max-width: 1115px;
+                    }
+
+                    .programs-li::marker {
+                        font-size: 35px;
+                        color: #A5CBF9;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 1199.98px) {}
+
+@media (max-width: 1399.98px) {}
